2005-01-19  Alexander Malysh <amalysh at kannel.org>
    * configure.in, configure: fixed bug #178 and similar bugs.
      Additionaly fixed indentation.
      Thanks to sradman for bug report.

2005-01-19  Alexander Malysh <amalysh at kannel.org>
    * Makefile.in: fixed bug #173.
      Thanks to joergent.

2004-12-23  Alexander Malysh <amalysh at kannel.org>
    * contrib/kannel-monitor/index.php: and yet another one-liner.
      Fixed a case when there is a bearerbox attached and no smsbox's
      attached to it, the bearerbox doesn't appear in the Box Connections.
      This is due to the test being an empty() test with a few spaces
      in the variable $x... Doing a trim solved this..
      Thanks to Bill Brigden <bill at baghead.co.uk>.
      [Msg-Id: <200412231224.iBNCOU008238@bill.aqvs.co.uk>]

2004-12-23  Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: applied 'http client timeouts part1 (v4)' patch.
      This patch fixes a problem with dead connections in http client
      connection pool. It's only a first part of fixes that we need
      (we still need to kill inactive connection after timeout expired).
      How it works:
      1) before putting connection into connection pool register dummy callback
      2) if dummy callback called (we will receive error poll event) check if
         connection still ok and if not destroy it
      3) before return connection from pool, unregister dummy callback

2004-12-23  Alexander Malysh <amalysh at kannel.org>
    * gwlib/conn.[ch]: added 'conn_register_real' that takes callback data
      and data-destroyer function pointer. When conn_destroy/conn_unregister
      called and Connection has data_destroyer fn-pointer that will be called
      in order to destroy callback data. When conn_register on already
      registered data called that if old-data != new-data then data-destroyer
      function called in order to destroy previous callback data.
      Additionaly some locking fixes.
